<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/app_info_name" />

            <TextView
                android:id="@+id/app_info_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/app_info_p_name" />

            <TextView
                android:id="@+id/app_info_p_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/app_info_version" />

            <TextView
                android:id="@+id/app_info_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/app_info_storage" />

            <TextView
                android:id="@+id/app_info_storage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/app_info_install" />

            <TextView
                android:id="@+id/app_info_install"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/app_info_update" />

            <TextView
                android:id="@+id/app_info_updated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/app_info_permission" />

            <TextView
                android:id="@+id/app_info_permission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/app_info_chplay" />

            <TextView
                android:id="@+id/app_info_chplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textColor="@drawable/select_fore_ground"
                android:autoLink="web" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorGray" />
    </LinearLayout>
</ScrollView>